<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/media_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MediaActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"
        android:text="@string/main_title"
        style="@style/textMessageTitle" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:text="@string/media_title"
        style="@style/textMessageMain"
        android:drawableLeft="@drawable/picture__1_"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="215dp">

        <Button
            android:layout_width="160dp"
            android:layout_height="96dp"
            android:id="@+id/btnBack"
            style="@style/mainButton"
            android:text="@string/buttonSettingsBack"
            android:layout_weight="1"/>

    </LinearLayout>

</LinearLayout>